--- a/corprules.in
+++ b/corprules.in
@@ -4971,10 +4971,10 @@ SOSEEM in fact
 SOSEEM quite independently
 SOSEEM quite frankly
 
-SMARTASS+300
+SMARTASS+200
 SMARTASS (Though we are certainly thinking it loudly)
 
-FUNNEND+300
+FUNNEND+200
 FUNNEND (go figure!)
 FUNNEND XXX We feel this is not APPROPRIATE, SOSEEM
 FUNNEND XXX In fact, it really is the dumbest thing on wheels 
@@ -4986,12 +4986,14 @@ FUNNEND XXX In fact, we have never nerded so hard
 FUNNEND XXX LIT_REVERSAL, we emphasise that we could do \emph{so} much, if other people did it instead of us. 
 FUNNEND , though we are trying not to confuse the reader with our DIRECT reasonableness
 
+FILLER_SENTENCE FILLER_SENTENCE FUNNEND
+
 FILLER_SENTENCE+30	FILLER_SURPRISE
 FILLER_SENTENCE+15		TAKE_NOTE_THAT our SCI_GOAL here is to set the record straight on the issue of SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN
 FILLER_SENTENCE+15		This is an SCI_IMPORTANTV point to understand
-FILLER_SENTENCE		This point is, SOSEEM, deceptively truthful FUNNEND
-FILLER_SENTENCE		This point is, SOSEEM, \emph{deceptively truthful} FUNNEND
-FILLER_SENTENCE			This is represents a SCI_ADJ point (see CITATION)
+FILLER_SENTENCE		This point is, SOSEEM, deceptively truthful
+FILLER_SENTENCE		This point is, SOSEEM, \emph{deceptively truthful}
+FILLER_SENTENCE			This represents a SCI_ADJ point (see CITATION)
 FILLER_SENTENCE+15		This is INSTRUMENTAL to the success of our work
 FILLER_SENTENCE+15		We LIT_OMIT WHAT_PL OMIT_WHY
 FILLER_SENTENCE+15		Of course, this is not always POSCASE
@@ -6325,7 +6327,6 @@ PIERING {
 PIETOPIC+1 MATHADJ PROPNOUN
 PIETOPIC+1 SCI_GENERIC_NOUNX
 PIETOPIC+1 SCI_THING
-PIETOPIC+1 EXP_ADJ SCI_MODEL_TYPE
 PIETOPIC+1 AREAADJ SCI_FIELD
 PIETOPIC+1   EXP_ADJ SCI_MODEL_TYPE_P
 PIETOPIC+1   CONSTRAINT_TYPE
