--- a/corprules.in
+++ b/corprules.in
@@ -503,8 +503,8 @@ SCI_SYSTEM_ACTION SCI_PROOF_PROP
 
 SCI_GENERIC_NOUNX+32 SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN
 SCI_GENERIC_NOUNX+32 EXP_ADJ SCI_BUZZWORD_NOUN
-SCI_GENERIC_NOUNX+20 EXP_ADJ PREPOWER-SCI_BUZZWORD_NOUN
-SCI_GENERIC_NOUNX+20 PREPOWER-SCI_BUZZWORD_NOUN
+SCI_GENERIC_NOUNX+20 EXP_ADJ PREFIX-SCI_BUZZWORD_NOUN
+SCI_GENERIC_NOUNX+20 PREFIX-SCI_BUZZWORD_NOUN
 SCI_GENERIC_NOUNX GOOD_ADJ GOOD_NOUN
 SCI_GENERIC_NOUNX GOOD_NOUN
 
@@ -852,7 +852,7 @@ TRACE_UNIT	day
 TRACE_UNIT	minute
 TRACE_UNIT	second
 TRACE_UNIT	decade
-TRACE_UNIT	PREPOWER-second
+TRACE_UNIT	PREFIXX-second
 
 SCI_TRACE	TRACE_UNIT-long trace
 SCI_TRACE	NONZ-TRACE_UNIT-long trace
@@ -1260,7 +1260,7 @@ DOTPARA DOTOPENER DOTS DOTCONC
 
 DOTOPENER The SCI_VERBION of EXP_ADJ SCI_BUZZWORD_NOUN MATTERS, due to its SCI_ADJ CONSTRAINT_TYPE in OVERVERBING SCI_THING_P XXX SCI_IPF_MID TAKE_NOTE_THAT we SCI_SYS_VERB an SCI_ADJ_V SCI_MANNER with regard to a IMPL_COMPONENT, which is HACKED for use with SCI_THING_P. LIT_MIDDLE MODEL_CONCL 
 
-DOTOPENER IMPL_INTRO IMPL_MID CONNECT we present several AMBITIOUS SCI_BUZZWORD_NOUN for MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREPOWER} level SCI_AB_A_END, LIT_ALTHOUGH this is LREV SCI_FAIR and as SCI_EXPENSIVE as it is BAD XXX LIT_REVERSAL, RELWORK_CONCL 
+DOTOPENER IMPL_INTRO IMPL_MID CONNECT we present several AMBITIOUS SCI_BUZZWORD_NOUN for MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREFIX} level SCI_AB_A_END, LIT_ALTHOUGH this is LREV SCI_FAIR and as SCI_EXPENSIVE as it is BAD XXX LIT_REVERSAL, RELWORK_CONCL 
 
 DOTOPENER RELWORK_INTRO LIT_CONCLUSION, RESULT Over the last few TRACE_UNIT_LONGs, it has become increasingly apparent that EXP_WHOSE SCI_SYSTEM involving EXP_ADJ SCI_BUZZWORD_NOUN MODEL_GROUNDING XXX LIT_MIDDLE ASSUMPTION LIT_CONCLUSION SCI_THING_S SCI_CAN SCI_SYS_VERB DIFFICULT_X and AMBITIOUS SCI_PROBLEM_PL, such as the THISIDEA of CONCEPT XXX CONNECT EVAL_GUTS_INTRO LREV, ASSERTION. LIT_LEADIN RELWORK_MID_X XXX 
 
@@ -2339,7 +2339,7 @@ NETWORK_TYPE	Internet
 NETWORK_TYPE	research database
 NETWORK_TYPE	hypershift
 NETWORK_TYPE	ultralite
-NETWORK_TYPE	PREPOWER
+NETWORK_TYPE	PREFIX
 NETWORK_TYPE	nanodyne
 NETWORK_TYPE	exothermal 
 NETWORK_TYPE	adiabatic
@@ -2371,6 +2371,22 @@ NETWORK_TYPE	infrared
 NETWORK_TYPE	visual
 NETWORK_TYPE	non-linear
 
+
+
+EXP_TREK		neurogenic
+EXP_TREK		psychotropic
+EXP_TREK		nucleonic
+EXP_TREK		gravimetric
+EXP_TREK		quantum
+EXP_TREK		neutrino
+EXP_TREK		flux
+EXP_TREK		photonic
+EXP_TREK		PREFIXmetric
+EXP_TREK		chronoton
+EXP_TREK		temporal
+EXP_TREK		focused
+EXP_TREK		sonic
+
 #EXP_ADJ+1000 `GOOD_ADJ'
 EXP_ADJ+30		`GOOD_ADJ'
 EXP_ADJ+30		SCI_BUZZWORD_ADJ
@@ -2378,10 +2394,10 @@ EXP_ADJ+30		SOFTWARE_ADJ
 EXP_ADJ+30		real-time
 EXP_ADJ+30		ultrafast
 EXP_ADJ+30		quantised
-EXP_ADJ			electromagnetic
+EXP_ADJ+30		electromagnetic
 EXP_ADJ+30		real-world
 EXP_ADJ+30		experimental
-EXP_ADJ			commercialisable
+EXP_ADJ+20		commercialisable		
 EXP_ADJ+30		phenomenological
 EXP_ADJ+30		mathematical
 EXP_ADJ+30		numerical
@@ -2395,7 +2411,7 @@ EXP_ADJ+30		benchmark-tested
 EXP_ADJ+30		quality-tested
 EXP_ADJ+30		pharmaceutically-proven
 EXP_ADJ+30		proven
-EXP_ADJ			surface-enhanced
+EXP_ADJ+20		surface-enhanced
 EXP_ADJ+30		clinically-demonstrated
 EXP_ADJ+30		mathematically-proven
 EXP_ADJ+30		scientifically established
@@ -2412,24 +2428,7 @@ EXP_ADJ+30		active
 EXP_ADJ+35		SCI_STATUS_ADJ
 #EXP_ADJ+30		AREAADJ
 #EXP_ADJ+30		AREAMOD
-
-
-PREPOWER atto
-PREPOWER femto
-PREPOWER pico
-PREPOWER nano
-PREPOWER micro
-PREPOWER macro
-PREPOWER giga
-PREPOWER tera
-PREPOWER anti
-PREPOWER hyper
-PREPOWER ultra
-PREPOWER mega
-PREPOWER \"{u}ber
-#PREPOWER PREFIX
-
-
+EXP_ADJ+70		EXP_TREK
 
 
 EXP_TYPE	EXP_ADJ EXP_TYPE_UM
@@ -3346,6 +3345,13 @@ CONCL_CONCL CONCL_MID_X.
 #############################################################################
 
 #SCI_BUZZWORD_NOUN+1000 `GOOD_NOUN'
+SCI_BUZZWORD_NOUN+30 apertures
+SCI_BUZZWORD_NOUN+30 polarisations
+SCI_BUZZWORD_NOUN+30 polarities
+SCI_BUZZWORD_NOUN+30 capacitors
+SCI_BUZZWORD_NOUN+30 relays
+SCI_BUZZWORD_NOUN+30 phenomena
+SCI_BUZZWORD_NOUN+30 discriminators
 SCI_BUZZWORD_NOUN+30 technologies
 SCI_BUZZWORD_NOUN+30 communications
 SCI_BUZZWORD_NOUN+30 algorithms
@@ -3598,8 +3604,8 @@ SCI_THING_MOD+20	SCI_THING_P
 SCI_THING_MOD+25 MNOUNS of SCI_THING_P  
 SCI_THING_MOD+25 EXP_WHEREs of SCI_THING_P 
 
-SCI_THING_MOD	SCI_THING_MOD (at the \textit{PREPOWER} scale)
-SCI_THING_MOD	SCI_THING_MOD (LIT_REVERSAL_MAYBE at the \textit{PREPOWER} scale)
+SCI_THING_MOD	SCI_THING_MOD (at the \textit{PREFIX} scale)
+SCI_THING_MOD	SCI_THING_MOD (LIT_REVERSAL_MAYBE at the \textit{PREFIX} scale)
 SCI_THING_MOD	SCI_THING_MOD (at the SCI_BUZZWORD_ADJ level)
 SCI_THING_MOD	SCI_THING_MOD (LIT_REVERSAL_MAYBEat the SCI_BUZZWORD_ADJ level)
 SCI_THING_MOD	SCI_THING_MOD (LIT_REVERSAL)
@@ -3912,9 +3918,9 @@ SCI_BUZZWORD_ADJ+20 pseudorandom
 SCI_BUZZWORD_ADJ+20 viral
 SCI_BUZZWORD_ADJ+20 computable 
 SCI_BUZZWORD_ADJ+20 UPRVAR-computable 
-SCI_BUZZWORD_ADJ+20 PREPOWER-scale 
+SCI_BUZZWORD_ADJ+20 PREFIX-scale 
 SCI_BUZZWORD_ADJ+20 enhanced
-SCI_BUZZWORD_ADJ+20 PREPOWER-enhanced
+SCI_BUZZWORD_ADJ+20 PREFIX-enhanced
 SCI_BUZZWORD_ADJ+20 managerial
 SCI_BUZZWORD_ADJ+20 facile
 SCI_BUZZWORD_ADJ+20 solidly-grounded
@@ -4140,6 +4146,7 @@ DIFFERENT	duplicated
 DIFFERENT	improved
 DIFFERENT+3	incompatible
 DIFFERENT+3	compatible
+DIFFERENT+3	anomalous
 
 IMPROVEMENT	improvement
 IMPROVEMENT	degredation
@@ -5676,7 +5683,7 @@ SCI_GRAPH_CAPTION EXTRA_SENTENCE
 EXTRA_SENTENCE SCI_OUR_SYSTEM SCI_CAN METAVERB SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN LIT_BETTER than the FINDING by SCI_BY_WHO.
 EXTRA_SENTENCE It is LIT_OFTEN the case that SCI_COMPLEXNOUN ARISEs due to the LREV BAD SCI_VERBION of COMPILED MODEL_Ss.
 EXTRA_SENTENCE This CLEARLY SCI_DIAGRAM_VERBS the SCI_STATUS_ADJ LIT_INCREASING behaviour.
-EXTRA_SENTENCE By MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREPOWER} level, we successfully SCI_ACHIEVED a POSSIBLE_NV SOFTWARE_ADJ EVALUATION.
+EXTRA_SENTENCE By MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREFIX} level, we successfully SCI_ACHIEVED a POSSIBLE_NV SOFTWARE_ADJ EVALUATION.
 EXTRA_SENTENCE We were able to SCI_GOAL_ACHIEVE an POSSIBLE_V SOFTWARE_ADJ EVALUATION by MULTIPLE_VERBING the PROP_OR_MEASUREMENT_NO_SYSTEM.
 
 SCI_CLARITY+5 the sake of accuracy
@@ -5723,7 +5730,7 @@ EVAL_UNIT_UM	 sec
 EVAL_UNIT_UM	 hours
 EVAL_UNIT_UM	 days
 EVAL_UNIT_UM	 weeks
-EVAL_UNIT_UM	 PREPOWER-joules
+EVAL_UNIT_UM	 PREFIXX-joules
 EVAL_UNIT_UM	 dB
 EVAL_UNIT_UM	 percentile
 EVAL_UNIT_UM	 man-hours
@@ -5738,11 +5745,11 @@ EVAL_UNIT_UM	 MeV
 EVAL_UNIT_UM	 GeV
 EVAL_UNIT_UM	 kWh
 EVAL_UNIT_UM	 kilowatts
-EVAL_UNIT_UM	 PREFIX-cochranes
+EVAL_UNIT_UM	 PREFIXX-cochranes
 EVAL_UNIT_UM	 electronvolts
 EVAL_UNIT_UM	 TeV
 EVAL_UNIT_UM	 arb units
-EVAL_UNIT_UM	 PREPOWER-flops
+EVAL_UNIT_UM	 PREFIXX-flops
 EVAL_UNIT_UM	 GHz
 EVAL_UNIT_UM	 connections/sec
 EVAL_UNIT+7	EVAL_UNIT_UM
@@ -5910,7 +5917,7 @@ GNUPLOT {
 
 PLOTTITLE The EXP_ADJ SCI_COMPLEXNOUN of SCI_FIELD
 PLOTTITLE The EXP_ADJ SCI_BUZZWORD_NOUN
-PLOTTITLE The EXP_ADJ PREPOWER-SCI_BUZZWORD_NOUN
+PLOTTITLE The EXP_ADJ PREFIXX-SCI_BUZZWORD_NOUN
 PLOTTITLE The NETWORK_TYPE MNOUN
 PLOTTITLE The HACKED CONSTRAINT_TYPE
 
@@ -5994,8 +6001,8 @@ LATEX_CITEPACK \usepackage{cite}
 
 LATEX_FONTCLASS+2 \usepackage{times}
 #LATEX_FONTCLASS \usepackage{helv}
-#LATEX_FONTCLASS \usepackage{palatino}
-#LATEX_FONTCLASS 
+LATEX_FONTCLASS \usepackage{palatino}
+LATEX_FONTCLASS 
 
 LATEX_DOCCLASS+3 \documentclass[LATEX_FONTSIZE,twocolumn,nofootinbib]{article}
 #LATEX_DOCCLASS \documentclass[conference]{IEEEtran}
@@ -7560,20 +7567,52 @@ ADVERB trivially
 ADVERB unconditionally
 ADVERB universally
 
-PREFIX semi
-PREFIX quasi
-PREFIX pseudo
-PREFIX hyper
-PREFIX super
-PREFIX ultra
-PREFIX co
-PREFIX contra
-PREFIX non
-PREFIX anti
-PREFIX right
-PREFIX left
-PREFIX sub
-PREFIX FAMOUS
+
+PREFIXX semi
+PREFIXX quasi
+PREFIXX pseudo
+PREFIXX super
+PREFIXX ultra
+PREFIXX co
+PREFIXX contra
+PREFIXX non
+PREFIXX anti
+PREFIXX right
+PREFIXX left
+PREFIXX sub
+PREFIXX quad
+PREFIXX tri
+PREFIXX bi
+PREFIXX mono
+PREFIXX iso
+PREFIXX semi
+PREFIXX over
+PREFIXX peri
+PREFIXX inter
+PREFIXX infra
+PREFIXX non
+PREFIXX pre
+PREFIXX post
+PREFIXX pro
+PREFIXX trans
+PREFIXX FAMOUS
+
+PREFIXX atto
+PREFIXX femto
+PREFIXX pico
+PREFIXX nano
+PREFIXX micro
+PREFIXX macro
+PREFIXX giga
+PREFIXX tera
+PREFIXX hyper
+PREFIXX hypo
+PREFIXX mega
+
+
+PREFIX+40 PREFIXX
+PREFIX \"{u}ber
+
 # subscripts and superscripts, etc, look stupid
 PREFIX+5 $ONEVAR$
 
@@ -7611,6 +7650,8 @@ MNOUNS functionals
 MNOUNS functions
 MNOUN functor
 MNOUNS functors
+MNOUN gradient
+MNOUNS gradients
 MNOUN graph
 MNOUNS graphs
 MNOUN group
@@ -7661,6 +7702,8 @@ MNOUN scalar
 MNOUNS scalars
 MNOUN set
 MNOUNS sets
+MNOUN singularity
+MNOUNS singularities
 MNOUNS subalgebras
 MNOUN subalgebra
 MNOUN subgroup
