--- a/corprules.in
+++ b/corprules.in
@@ -5901,7 +5901,7 @@ GRAPH_ERRORS+4
 
 GRAPH_CURVE_LABEL title 'NETWORK_TYPE'
 GRAPH_CURVE_LABEL title 'EXP_ADJ SCI_BUZZWORD_NOUN'
-GRAPH_CURVE_LABEL title 'SCI_THING'
+GRAPH_CURVE_LABEL title 'PROPNOUN'
 GRAPH_CURVE_LABEL title 'CONSTRAINT_TYPE'
 
 GNUPLOT {
