--- a/corprules.in
+++ b/corprules.in
@@ -6993,7 +6993,7 @@ ASSENDER   , which we SCI_PRESENT_VERB to SCI_PROVE_VERB our SCI_MAIN SCI_PROBLE
 ASSENDER   , instantly OVERVERBING CONCEPT
 ASSENDER   , OVERVERBING the SCI_VERBIONs of AREAMOD CONSTRAINT_TYPE
 ASSENDER   , however BAD such SCI_GUESSES might be in general
-ASSENDER   , which, SCI_ADV, represents the CRUX here
+ASSENDER   , which SCI_ADV represents the CRUX here
 ASSENDER   , which will be METAVERBED SCI_NOW
 ASSENDER   , which we METAVERB SCI_NOW
 ASSENDER+5 , which ISCLEAR
