--- a/corprules.in
+++ b/corprules.in
@@ -3921,9 +3921,9 @@ SCI_BUZZWORD_ADJ+20 pseudorandom
 SCI_BUZZWORD_ADJ+20 viral
 SCI_BUZZWORD_ADJ+20 computable 
 SCI_BUZZWORD_ADJ+20 UPRVAR-computable 
-SCI_BUZZWORD_ADJ+20 PREFIX-scale 
+SCI_BUZZWORD_ADJ+20 PREFIXX-scale 
 SCI_BUZZWORD_ADJ+20 enhanced
-SCI_BUZZWORD_ADJ+20 PREFIX-enhanced
+SCI_BUZZWORD_ADJ+20 PREFIXX-enhanced
 SCI_BUZZWORD_ADJ+20 managerial
 SCI_BUZZWORD_ADJ+20 facile
 SCI_BUZZWORD_ADJ+20 solidly-grounded
