--- a/corprules.in
+++ b/corprules.in
@@ -573,10 +573,10 @@ SCI_INTRO_GENERIC_CLOSING SCI_INTRO_GENERIC_MID XXX
 
 SCI_INTRO_FILLER+15 FILLER_SENTENCE 
 SCI_INTRO_FILLER+15 To put this in perspective, consider the THISIDEA that SCI_STATUS_ADJ SCI_PEOPLE LIT_OFTEN use SCI_THING_MOD to SCI_SOLVE_CLAUSE
-SCI_INTRO_FILLER+15 LIT_LEADIN the usual methods for the SCI_ACT do not apply in this area
-SCI_INTRO_FILLER+15 LIT_LEADIN the IMPACT SCI_FIELD of this FINDING has been SCI_REACTION
-SCI_INTRO_FILLER+15 LIT_LEADIN this is a direct result of the SCI_ACT CITATION_SOMETIMES
-SCI_INTRO_FILLER+15 LIT_ALTHOUGH RELATED solutions to this SCI_PROBLEM are LIT_GOOD, none has taken the EXP_ADJ SCI_APPROACH we propose SCI_IN_THIS_PAPER
+SCI_INTRO_FILLER+15 LIT_MIDDLE LIT_LEADIN the usual methods for the SCI_ACT do not apply in this area
+SCI_INTRO_FILLER+15 LIT_MIDDLE LIT_LEADIN the IMPACT SCI_FIELD of this FINDING has been SCI_REACTION
+SCI_INTRO_FILLER+15 LIT_MIDDLE LIT_LEADIN this is a direct result of the SCI_ACT CITATION_SOMETIMES
+SCI_INTRO_FILLER+15 LIT_MIDDLE LIT_ALTHOUGH RELATED solutions to this SCI_PROBLEM are LIT_GOOD, none has taken the EXP_ADJ SCI_APPROACH we propose SCI_IN_THIS_PAPER
 
 SCI_INTRO_FILLER SCI_INTRO_FILLER (FILLER_SENTENCE)
 
@@ -4917,7 +4917,7 @@ XXX+10		CITATION.
 XXX+10		CITATION_MULTI.
 XXX+7		. FILLER_SENTENCE.
 XXX+5		$\!$\footnote{FILLER_SENTENCE.}.
-XXX+5		$\!$\footnote{LIT_MIDDLE SCI_INTRO_FILLER.}. 
+XXX+5		$\!$\footnote{SCI_INTRO_FILLER.}. 
 
 SCI_MAY might
 SCI_MAY may
