--- a/corprules.in
+++ b/corprules.in
@@ -181,7 +181,7 @@ SCI_ABSTRACT_A SCI_AB_A_START the SCI_ACT SCI_AB_A_END.
 SCI_ABSTRACT_A SCI_AB_A_START that SCI_OVERALL_THESIS_PROVE SCI_AB_A_END.
 
 SCI_AB_A_START SCI_IN_THIS_PAPER, we SCI_PROVE_VERB 
-SCI_AB_A_START LIT_MIDDLE, SCI_ANUMBER SCI_COUNTRY_MAYBE SCI_PEOPLE would SCI_DISAGREEWITH the success of 
+SCI_AB_A_START LIT_MIDDLE SCI_ANUMBER SCI_COUNTRY_MAYBE SCI_PEOPLE would SCI_DISAGREEWITH the success of 
 SCI_AB_A_START given the current status of EXP_ADJ SCI_BUZZWORD_NOUN, SCI_PEOPLE SCI_ADJ_ADV desire
 SCI_AB_A_START after TRACE_UNIT_LONGs of SCI_ADJ research into SCI_THING_MOD, we SCI_PROVE_VERB
 
@@ -1656,7 +1656,7 @@ RELWORK_FILLER+15 This work follows an LIT_GREAT_ADV_V long line of RELATED SCI_
 RELWORK_FILLER+15 This is arguably SCI_FAIR.
 RELWORK_FILLER+15 The only other noteworthy work in this area suffers from SCI_FAIR assumptions about SCI_GENERIC_NOUN RELWORK_CITATION.
 RELWORK_FILLER+15 SCI_B_LEADIN_C SCI_OUR_SYSTEM also SCI_SYSTEM_ACTION, but without all the unnecssary complexity.
-RELWORK_FILLER+15 LIT_MIDDLE, CONSTRAINT_TYPE aside, SCI_OUR_SYSTEM SCI_VERBS MORE accurately.
+RELWORK_FILLER+15 LIT_MIDDLE CONSTRAINT_TYPE aside, SCI_OUR_SYSTEM SCI_VERBS MORE accurately.
 RELWORK_FILLER+15 We believe there is room for both schools of thought within the field of SCI_FIELD.
 RELWORK_FILLER+15 LIT_MIDDLE LIT_ALTHOUGH this work was published before ours, we came up with the SCI_APPROACH first but could not publish it until now due to red tape. 
 RELWORK_FILLER+15 SCI_B_LEADIN_C SCI_IN_THIS_PAPER, we SCI_PROBLEM_SOLVED all of the SCI_PROBLEM_PL inherent in the RELATED work.
@@ -3322,7 +3322,7 @@ CONCL_MID_X SCI_OUR_SYSTEM SCI_MAYBE_CAN successfully SCI_SYS_VERB SCI_ANUMBER S
 CONCL_MID_X one potentially LIT_GREAT SCI_DRAWBACK of SCI_OUR_SYSTEM is that it SCI_CANNOT SCI_SYS_VERB SCI_GENERIC_NOUN; we SCI_AIM to address this in future work
 CONCL_MID_X the characteristics of SCI_OUR_SYSTEM, in relation to those of more SCI_STATUS_ADJ SCI_SYSTEM_PL, are SCI_ADJ_ADV more SCI_ADJ
 CONCL_MID_X+3 SCI_GENERIC_THESIS_PAST
-CONCL_MID_X LIT_MIDDLE, the SCI_MAIN contribution of our work is that SCI_GENERIC_THESIS_PAST
+CONCL_MID_X LIT_MIDDLE the SCI_MAIN contribution of our work is that SCI_GENERIC_THESIS_PAST
 
 SCI_GENERIC_THESIS_PAST we SCI_PROVE_VERBED that SCI_OVERALL_THESIS_PROVE
 SCI_GENERIC_THESIS_PAST we used SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN to SCI_PROVE_VERB that SCI_OVERALL_THESIS_PROVE
@@ -4291,7 +4291,7 @@ LIT_MIDDLE	Developing this idea further,
 LIT_MIDDLE	DISREGARDING BIAS FORNOWX
 LIT_MIDDLE	Consider FORNOW that
 LIT_MIDDLE	Now TAKE_NOTE_THAT FORNOW	
-LIT_MIDDLE	Given that LITTLE research into SCI_THING_MOD
+LIT_MIDDLE	Given that LITTLE research into SCI_THING_MOD has been SCI_ACHIEVED,
 
 DISREGARDING Disregarding
 DISREGARDING Laying aside
@@ -5023,7 +5023,7 @@ FILLER_SENTENCE+15		Directly SCI_USING AMBITIOUS SCI_MODEL_TYPE_P is both DIFFIC
 FILLER_SENTENCE+1		Recall that our SCI_GOAL is only to SCI_VERB \textit{SOFTWARE_ADJ} SCI_MODEL_TYPE_P
 FILLER_SENTENCE+15		Recall that, SCI_TOGETHERWITH research into EXP_WHEREs, our SCI_GOAL is to SCI_VERB \textit{SOFTWARE_ADJ} SCI_MODEL_TYPE_P
 
-FILLER_SURPRISE		LIT_MIDDLE, LIT_ALTHOUGH WHAT FILLER_SURPRISE_1, it FILLER_SURPRISE_2
+FILLER_SURPRISE		LIT_MIDDLE LIT_ALTHOUGH WHAT FILLER_SURPRISE_1, it FILLER_SURPRISE_2
 FILLER_SURPRISE		SCI_B_LEADIN_C LIT_ALTHOUGH WHAT FILLER_SURPRISE_1, it FILLER_SURPRISE_2
 FILLER_SURPRISE_1	might seem PERVERSE
 FILLER_SURPRISE_1	is PROBE_CONSIDERED PERVERSE in SCI_ANUMBER cases	
