--- a/corprules.in
+++ b/corprules.in
@@ -694,7 +694,11 @@ SCI_MODEL_TYPE_P	morphologies
 
 MODEL_XXX+10	XXX
 MODEL_XXX+5	. MODEL_FILLER.
-MODEL_XXX	$\!$\footnote{MODEL_FILLER.}.
+MODEL_XXX	{
+$\!$
+\footnote{
+MODEL_FILLER.}.
+}
 
 MODEL_INTRO_P	MODEL_INTRO_1 MODEL_BODY_INSIDE MODEL_CONCL
 MODEL_BODY_P	MODEL_INTRO MODEL_BODY_INSIDE MODEL_CONCL
@@ -2614,7 +2618,11 @@ EVAL_DONE_DIFFERENT Had we EMULATED our EXP_WHERE, as opposed to EMULATING_IT, w
 
 EVAL_MOD_XXX+10	XXX
 EVAL_MOD_XXX+5	.  EVAL_SEC_FILLER.
-EVAL_MOD_XXX	$\!$\footnote{EVAL_SEC_FILLER.}.
+EVAL_MOD_XXX	{
+$\!$
+\footnote{
+EVAL_SEC_FILLER.}.
+}
 
 EMULATING	emulating
 EMULATING	simulating
