--- a/corprules.in
+++ b/corprules.in
@@ -2445,9 +2445,8 @@ EXP_ADJ+30		symmetric
 EXP_ADJ+30		complex
 EXP_ADJ+30		expert
 EXP_ADJ+30		active
-#EXP_ADJ+30		SCI_MATH_ADJ	
+#EXP_ADJ+30		MATHADJ	
 EXP_ADJ+35		SCI_STATUS_ADJ
-#EXP_ADJ+30		AREAADJ
 #EXP_ADJ+30		AREAMOD
 EXP_ADJ+70		EXP_TREK
 
