--- a/corprules.in
+++ b/corprules.in
@@ -5817,7 +5817,7 @@ EVAL_MEASUREMENT_UM computational RATE
 EVAL_MEASUREMENT_UM diffusion RATE
 EVAL_MEASUREMENT_UM+3 SCI_VERBION RATE 
 EVAL_MEASUREMENT_UM+3 SOFTWARE_ADJ SCI_VERBION RATE 
-EVAL_MEASUREMENT_UM+1 SOFTWARE_ADJ SCI_SYS_VERBION MNOUN
+EVAL_MEASUREMENT_UM+1 SCI_SYS_VERBION MNOUN
 EVAL_MEASUREMENT_UM energy
 EVAL_MEASUREMENT_UM response 
 EVAL_MEASUREMENT_UM bandwidth
@@ -6181,7 +6181,7 @@ TABKEY The table OFVAL above SCI_DIAGRAM_VERBS HACKED SOFTWARE_PROP_UNMOD
 TABKEYS TABKEY
 TABKEYS TABKEY ASSENDER
 
-SCI_TAB_CAPTION TABKEY: SCI_GRAPH_CAPTION 
+SCI_TAB_CAPTION TABKEY. SCI_GRAPH_CAPTION 
 SCI_TAB_CAPTION TABKEY, LIT_BASED_ON SCI_DIAGRAM_ABOUT.
 
 LATEX_TAB_LABEL dia:labelNEWTABLABEL+
@@ -7430,8 +7430,6 @@ THISREL+5 =
 THISREL+3 \ne
 THISREL+3 \le
 THISREL+3 \ge
-THISREL+3 <
-THISREL+3 >
 THISREL \sim
 THISREL \equiv
 THISREL \cong
