--- a/corprules.in
+++ b/corprules.in
@@ -6445,8 +6445,8 @@ SCI_PIE_CAPTION+2 PIETEXT SCI_OUR_SYSTEM SCI_SYS_VERBS SCI_GENERIC_NOUN just as 
 SCI_PIE_CAPTION+2 PIETEXT SCI_VERBING EXP_ADJ SCI_VERBIONs through SCI_THING_P.
 SCI_PIE_CAPTION CONCL_CONCL EXTRA_SENTENCE
 
-LATEX_PIE_LABEL gantt:labelNEWPIELABEL+
-LATEX_PIE_LABEL_REF gantt:labelNEWPIELABEL#
+LATEX_PIE_LABEL pie:labelNEWPIELABEL+
+LATEX_PIE_LABEL_REF pie:labelNEWPIELABEL#
 NEWPIELABEL\+
 NEWPIELABEL\#
 
