--- a/corprules.in
+++ b/corprules.in
@@ -6184,8 +6184,8 @@ TABKEYS TABKEY ASSENDER
 SCI_TAB_CAPTION TABKEY. SCI_GRAPH_CAPTION 
 SCI_TAB_CAPTION TABKEY, LIT_BASED_ON SCI_DIAGRAM_ABOUT.
 
-LATEX_TAB_LABEL dia:labelNEWTABLABEL+
-LATEX_TAB_LABEL_REF dia:labelNEWTABLABEL#
+LATEX_TAB_LABEL tab:labelNEWTABLABEL+
+LATEX_TAB_LABEL_REF tab:labelNEWTABLABEL#
 NEWTABLABEL\+
 NEWTABLABEL\#
 
