--- a/corprules.in
+++ b/corprules.in
@@ -5811,7 +5811,7 @@ EVAL_MEASUREMENT_UM EXP_ADJ wow-factor
 EVAL_MEASUREMENT_UM power
 EVAL_MEASUREMENT_UM complexity
 EVAL_MEASUREMENT_UM block MNOUN
-EVAL_MEASUREMENT_UM+3 popularity of SCI_THING_MOD
+EVAL_MEASUREMENT_UM+3 popularity of SCI_THING
 EVAL_MEASUREMENT_UM sampling RATE
 EVAL_MEASUREMENT_UM computational RATE
 EVAL_MEASUREMENT_UM diffusion RATE
