--- a/corprules.in
+++ b/corprules.in
@@ -5803,7 +5803,8 @@ EVAL_MEASUREMENT_UM throughput
 EVAL_MEASUREMENT_UM speed
 EVAL_MEASUREMENT_UM+8 EXP_ADJ potential
 EVAL_MEASUREMENT_UM latency
-EVAL_MEASUREMENT_UM+3 time for SCI_GENERIC_NOUN 
+EVAL_MEASUREMENT_UM+3 SCI_GENERIC_NOUN 
+EVAL_MEASUREMENT_UM+3 OVERVERBING RATE
 EVAL_MEASUREMENT_UM+8 EXP_ADJ RATE  
 EVAL_MEASUREMENT_UM work MNOUN
 EVAL_MEASUREMENT_UM `wow'-factor
@@ -5832,6 +5833,7 @@ RATE factor
 RATE ratio
 RATE size
 RATE input
+RATE time
 
 EVAL_MEASUREMENT EVAL_MEASUREMENT_UM
 EVAL_MEASUREMENT STAT_ADJ EVAL_MEASUREMENT_UM
