--- a/corprules.in
+++ b/corprules.in
@@ -5961,11 +5961,11 @@ GNUPLOT {
  
 }
 
-PLOTTITLE The EXP_ADJ SCI_COMPLEXNOUN of SCI_FIELD
-PLOTTITLE The EXP_ADJ SCI_BUZZWORD_NOUN
-PLOTTITLE The EXP_ADJ PREFIXX-SCI_BUZZWORD_NOUN
-PLOTTITLE The NETWORK_TYPE MNOUN
-PLOTTITLE The HACKED CONSTRAINT_TYPE
+PLOTTITLE EXP_ADJ SCI_COMPLEXNOUN of SCI_FIELD
+PLOTTITLE EXP_ADJ SCI_BUZZWORD_NOUN
+PLOTTITLE EXP_ADJ PREFIXX-SCI_BUZZWORD_NOUN
+PLOTTITLE NETWORK_TYPE MNOUN
+PLOTTITLE HACKED CONSTRAINT_TYPE
 
 
 #############################################################################
