--- a/corprules.in
+++ b/corprules.in
@@ -6106,7 +6106,7 @@ SCI_DIAGRAM_CAPTION
 
 }
 
-LATEX_DIA_FILENAME diaNEWDIANUM+.eps
+LATEX_DIA_FILENAME diagNEWDIANUM+.eps
 NEWDIANUM\+
 NEWDIANUM\#
 
